# rusty-robot

./: Cargo.toml
assets/: Sprite-0001.aseprite  rusty.aseprite  rusty.json  rusty_left.aseprite  rusty_left.json  rusty_left_right.aseprite  rusty_left_right.json  rusty_left_right_cropped.json  rusty_still.json
src/: asteroids.rs  asteroids_plugin.rs  gravity.rs  main.rs  rusty.rs  rusty_plugin.rs
