[package]
authors = ["Gary Holland <garyhollandxyz@gmail.com>"]
edition = "2018"
name = "rusty-robot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/cart/bevy", rev = "943e88e498c2091958b4051416533009ae1c0d34"}
rand = "0.7.3"
